@@ -338,3 +338,313 @@ sh bin/mqshutdown namesrv
 
 ![image-20220716122912326](assets/image-20220716122912326.png)
 
+#### 复制策略
+
+复制策略是Broker的Master与Slave间的数据同步方式。分为同步复制与异步复制：
+
+- 同步复制：消息写入master后，master会等待slave同步数据成功后才向producer返回成功ACK
+
+- 异步复制：消息写入master后，master立即向producer返回成功ACK，无需等待slave同步数据成功
+
+> 异步复制策略会降低系统的写入延迟，*RT*变小，提高了系统的吞吐量
+
+#### 刷盘策略
+
+刷盘策略指的是broker中`消息`的落盘方式，即消息发送到broker内存后消息持久化到磁盘的方式。分为同步刷盘与异步刷盘：
+
+- 同步刷盘：当消息持久化到broker的磁盘后才算是消息写入成功。
+
+- 异步刷盘：当消息写入到broker的内存后即表示消息写入成功，无需等待消息持久化到磁盘。
+
+> *1*）异步刷盘策略会降低系统的写入延迟，*RT*变小，提高了系统的吞吐量 
+>
+> *2*）消息写入到*Broker*的内存，一般是写入到了*PageCache* 
+>
+> *3*）对于异步 刷盘策略，消息会写入到*PageCache*后立即返回成功*ACK*。但并不会立即做落盘操作，而是当*PageCache*到达一定量时会自动进行落盘。
+
+### 2、Broker集群模式
+
+根据Broker集群中各个节点间关系的不同，Broker集群可以分为以下几类：
+
+#### 单Master
+
+只有一个broker（其本质上就不能称为集群）。这种方式也只能是在测试时使用，生产环境下不能使用，因为存在单点问题。
+
+#### 多Master
+
+broker集群仅由多个master构成，不存在Slave。同一Topic的各个Queue会平均分布在各个master节点上。
+
+>  优点：配置简单，单个Master宕机或重启维护对应用无影响，在磁盘配置为RAID10时，即使机器宕机不可恢复情况下，由于RAID10磁盘非常可靠，消息也不会丢（异步刷盘丢失少量消息，同步刷盘一条不丢），性能最高；
+>
+> 缺点：单台机器宕机期间，这台机器上未被消费的消息在机器恢复之前不可订阅（不可消费），消息实时性会受到影响。
+
+> 以上优点的前提是，这些*Master*都配置了*RAID*磁盘阵列。如果没有配置，一旦出现某*Master*宕机，则会发生大量消息丢失的情况。 
+
+#### 多Master多Slave模式-异步复制
+
+​		broker集群由多个master构成，每个master又配置了多个slave（在配置了RAID磁盘阵列的情况下，一个master一般配置一个slave即可）。master与slave的关系是主备关系，即master负责处理消息的读写请求，而slave仅负责消息的备份与master宕机后的角色切换。
+
+​		异步复制即前面所讲的复制策略中的异步复制策略，即消息写入master成功后，master立即向producer返回成功ACK，无需等待slave同步数据成功。
+
+​		该模式的最大特点之一是，当master宕机后slave能够自动切换为master。不过由于slave从master的同步具有短暂的延迟（毫秒级），所以当master宕机后，这种异步复制方式可能会存在少量消息的丢失问题。
+
+> *Slave*从*Master*同步的延迟越短，其可能丢失的消息就越少 
+>
+> 对于*Master*的*RAID*磁盘阵列，若使用的也是异步复制策略，同样也存在延迟问题，同样也可能会丢失消息。但*RAID*阵列的秘诀是微秒级的（因为是由硬盘支持的），所以其丢失的数据量会更少。 
+
+#### 多Master多Slave模式-同步双写
+
+该模式是多<font color="blue">`Master`</font>多<font color="blue">`Slave`</font>模式的<font color="blue">**`同步复制`**</font>实现。所谓同步双写，指的是消息写入master成功后，master会等待slave同步数据成功后才向producer返回成功ACK，即master与slave都要写入成功后才会返回成功ACK，也即双写。
+
+该模式与异步复制模式相比，优点是消息的安全性更高，不存在消息丢失的情况。但单个消息的RT略高，从而导致性能要略低（大约低10%）。
+
+该模式存在一个大的问题：对于目前的版本，Master宕机后，Slave不会自动切换到Master。
+
+#### 最佳实践
+
+一般会为Master配置RAID10磁盘阵列，然后再为其配置一个Slave。即利用了RAID10磁盘阵列的高效、安全性，又解决了可能会影响订阅的问题。
+
+> *1*）*RAID*磁盘阵列的效率要高于*Master-Slave*集群。因为*RAID*是硬件支持的。也正因为如此， 
+>
+> 所以*RAID*阵列的搭建成本较高。 
+>
+> *2*）多*Master+RAID*阵列，与多*Master*多*Slave*集群的区别是什么？ 
+>
+> - 多*Master+RAID*阵列，其仅仅可以保证数据不丢失，即不影响消息写入，但其可能会影响到消息的订阅。但其执行效率要远高于多Master多Slave集群 
+>
+> - 多*Master*多*Slave*集群，其不仅可以保证数据不丢失，也不会影响消息写入。其运行效率要低于多Master+RAID阵列
+
+## 五、集群搭建实践
+
+### 1、集群架构
+
+这里要搭建一个双主双从异步复制的Broker集群。为了方便，这里使用了两台主机来完成集群的搭建。这两台主机的功能与broker角色分配如下表。
+
+| 序号 | **主机名**/IP |    **IP**     |      **功能**       |  **BROKER**角色  |
+| :--: | :-----------: | :-----------: | :-----------------: | :--------------: |
+|  1   |  rocketmq01   | 192.168.50.11 | NameServer + Broker | Master1 + Slave2 |
+|  2   |  rocketmq02   | 192.168.50.12 | NameServer + Broker | Master2 + Slave1 |
+
+### 2、修改RocketMQ01配置文件
+
+#### 配置文件位置
+
+要修改的配置文件在rocketMQ解压目录的conf/2m-2s-async目录中。
+
+![image-20220716184612332](assets/image-20220716184612332.png)
+
+#### 修改broker-a.properties
+
+将该配置文件内容修改为如下：
+
+```properties
+# 指定整个broker集群的名称，或者说是RocketMQ集群的名称 
+brokerClusterName=DefaultCluster 
+# 指定master-slave集群的名称。一个RocketMQ集群可以包含多个master-slave集群 
+brokerName=broker-a 
+# master的brokerId为0 
+brokerId=0
+# 指定删除消息存储过期文件的时间为凌晨4点 
+deleteWhen=04 
+# 指定未发生更新的消息存储文件的保留时长为48小时，48小时后过期，将会被删除 
+fileReservedTime=48 
+# 指定当前broker为异步复制master 
+brokerRole=ASYNC_MASTER 
+# 指定刷盘策略为异步刷盘 
+flushDiskType=ASYNC_FLUSH 
+# 指定Name Server的地址 
+namesrvAddr=192.168.50.11:9876;192.168.50.12:9876
+```
+
+#### 修改broker-b-s.properties
+
+将该配置文件内容修改为如下：
+
+```properties
+brokerClusterName=DefaultCluster 
+# 指定这是另外一个master-slave集群 
+brokerName=broker-b 
+# slave的brokerId为非0 
+brokerId=1 
+deleteWhen=04 
+fileReservedTime=48 
+# 指定当前broker为slave 
+brokerRole=SLAVE 
+flushDiskType=ASYNC_FLUSH 
+namesrvAddr=192.168.50.11:9876;192.168.50.12:9876
+# 指定Broker对外提供服务的端口，即Broker与producer与consumer通信的端口。默认 10911。由于当前主机同时充当着master1与slave2，而前面的master1使用的是默认端口。这 里需要将这两个端口加以区分，以区分出master1与slave2 
+listenPort=11911 
+# 指定消息存储相关的路径。默认路径为~/store目录。由于当前主机同时充当着master1与 slave2，master1使用的是默认路径，这里就需要再指定一个不同路径 
+storePathRootDir=~/store-s 
+storePathCommitLog=~/store-s/commitlog 
+storePathConsumeQueue=~/store-s/consumequeue 
+storePathIndex=~/store-s/index 
+storeCheckpoint=~/store-s/checkpoint 
+abortFile=~/store-s/abort
+```
+
+#### 其他配置
+
+除了以上配置外，这些配置文件中还可以设置其它属性。
+
+```properties
+#指定整个broker集群的名称，或者说是RocketMQ集群的名称 
+brokerClusterName=rocket-MS 
+#指定master-slave集群的名称。一个RocketMQ集群可以包含多个master-slave集群 
+brokerName=broker-a
+#0 表示 Master，>0 表示 
+Slave brokerId=0 
+#nameServer地址，分号分割 
+namesrvAddr=nameserver1:9876;nameserver2:9876 
+#默认为新建Topic所创建的队列数 
+defaultTopicQueueNums=4 
+#是否允许 Broker 自动创建Topic，建议生产环境中关闭 
+autoCreateTopicEnable=true 
+#是否允许 Broker 自动创建订阅组，建议生产环境中关闭 
+autoCreateSubscriptionGroup=true 
+#Broker对外提供服务的端口，即Broker与producer与consumer通信的端口 
+listenPort=10911 
+#HA高可用监听端口，即Master与Slave间通信的端口，默认值为listenPort+1 
+haListenPort=10912 
+#指定删除消息存储过期文件的时间为凌晨4点 
+deleteWhen=04 
+#指定未发生更新的消息存储文件的保留时长为48小时，48小时后过期，将会被删除 
+fileReservedTime=48 
+#指定commitLog目录中每个文件的大小，默认1G 
+mapedFileSizeCommitLog=1073741824 
+#指定ConsumeQueue的每个Topic的每个Queue文件中可以存放的消息数量，默认30w条 
+mapedFileSizeConsumeQueue=300000 
+#在清除过期文件时，如果该文件被其他线程所占用（引用数大于0，比如读取消息），此时会阻止 此次删除任务，同时在第一次试图删除该文件时记录当前时间戳。该属性则表示从第一次拒绝删除 后开始计时，该文件最多可以保留的时长。在此时间内若引用数仍不为0，则删除仍会被拒绝。不过 时间到后，文件将被强制删除 
+destroyMapedFileIntervalForcibly=120000 
+#指定commitlog、consumequeue所在磁盘分区的最大使用率，超过该值，则需立即清除过期文件
+diskMaxUsedSpaceRatio=88 
+#指定store目录的路径，默认在当前用户主目录中 
+storePathRootDir=/usr/local/rocketmq-all-4.5.0/store 
+#commitLog目录路径 
+storePathCommitLog=/usr/local/rocketmq-all-4.5.0/store/commitlog 
+#consumeueue目录路径 
+storePathConsumeQueue=/usr/local/rocketmq-all-4.5.0/store/consumequeue 
+#index目录路径 
+storePathIndex=/usr/local/rocketmq-all-4.5.0/store/index 
+#checkpoint文件路径 
+storeCheckpoint=/usr/local/rocketmq-all-4.5.0/store/checkpoint 
+#abort文件路径 
+abortFile=/usr/local/rocketmq-all-4.5.0/store/abort 
+#指定消息的最大大小 
+maxMessageSize=65536 
+#Broker的角色
+# - ASYNC_MASTER 异步复制Master 
+# - SYNC_MASTER 同步双写Master 
+# - SLAVE
+brokerRole=SYNC_MASTER 
+#刷盘策略 
+# - ASYNC_FLUSH 异步刷盘 
+# - SYNC_FLUSH 同步刷盘 
+flushDiskType=SYNC_FLUSH 
+#发消息线程池数量 
+sendMessageThreadPoolNums=128 
+#拉消息线程池数量 
+pullMessageThreadPoolNums=128 
+#强制指定本机IP，需要根据每台机器进行修改。官方介绍可为空，系统默认自动识别，但多网卡 时IP地址可能读取错误 
+brokerIP1=192.168.3.105
+```
+
+### 3、修改RocketMQ02配置文件
+
+#### 修改broker-b.properties
+
+将该配置文件内容修改为如下：
+
+```properties
+brokerClusterName=DefaultCluster 
+brokerName=broker-b 
+brokerId=0 
+deleteWhen=04 
+fileReservedTime=48 
+brokerRole=ASYNC_MASTER 
+flushDiskType=ASYNC_FLUSH 
+namesrvAddr=192.168.50.11:9876;192.168.50.12:9876
+```
+
+#### 修改broker-a-s.properties
+
+将该配置文件内容修改为如下：
+
+```properties
+brokerClusterName=DefaultCluster 
+brokerName=broker-a 
+brokerId=1 
+deleteWhen=04 
+fileReservedTime=48 
+brokerRole=SLAVE 
+flushDiskType=ASYNC_FLUSH
+namesrvAddr=192.168.50.11:9876;192.168.50.12:9876
+listenPort=11911 
+storePathRootDir=~/store-s 
+storePathCommitLog=~/store-s/commitlog 
+storePathConsumeQueue=~/store-s/consumequeue 
+storePathIndex=~/store-s/index 
+storeCheckpoint=~/store-s/checkpoint 
+abortFile=~/store-s/abort
+```
+
+### 4、启动服务器
+
+#### 启动NameServer集群
+
+分别启动rocketmqOS1与rocketmqOS2两个主机中的NameServer。启动命令完全相同。
+
+```shell
+nohup sh bin/mqnamesrv & 
+tail -f ~/logs/rocketmqlogs/namesrv.log
+```
+
+#### 启动两个Master
+
+分别启动rocketmqOS1与rocketmqOS2两个主机中的broker master。注意，它们指定所要加载的配置文件是不同的。
+
+```shell
+nohup sh bin/mqbroker -c conf/2m-2s-async/broker-a.properties & 
+tail -f ~/logs/rocketmqlogs/broker.log
+```
+
+```shell
+nohup sh bin/mqbroker -c conf/2m-2s-async/broker-b.properties & 
+tail -f ~/logs/rocketmqlogs/broker.log
+```
+
+#### 启动两个Slave
+
+分别启动rocketmqOS1与rocketmqOS2两个主机中的broker slave。注意，它们指定所要加载的配置文件是不同的。
+
+```
+nohup sh bin/mqbroker -c conf/2m-2s-async/broker-b-s.properties & 
+tail -f ~/logs/rocketmqlogs/broker.log
+```
+
+```
+nohup sh bin/mqbroker -c conf/2m-2s-async/broker-a-s.properties & 
+tail -f ~/logs/rocketmqlogs/broker.log
+```
+
+## 六、mqadmin命令
+
+在mq解压目录的bin目录下有一个mqadmin命令，该命令是一个运维指令，用于对mq的主题，集群，broker 等信息进行管理。
+
+### 1、修改bin/tools.sh
+
+在运行mqadmin命令之前，先要修改mq解压目录下bin/tools.sh配置的JDK的ext目录位置。本机的ext目录在/usr/java/jdk1.8.0_161/jre/lib/ext 。使用vim命令打开tools.sh文件，并在JAVA_OPT配置的-Djava.ext.dirs这一行的后面添加ext的路径。
+
+![image-20220716190357614](assets/image-20220716190357614.png)
+
+### 2、运行mqadmin
+
+直接运行该命令，可以看到其可以添加的commands。通过这些commands可以完成很多的功能。
+
+### 3、官网命令详解
+
+该命令在官网中有详细的用法解释。
+
+https://github.com/apache/rocketmq/blob/master/docs/cn/operation.md 
+
+![image-20220716190452116](assets/image-20220716190452116.png)
